--- a/index.html
+++ b/index.html
@@ -584,12 +584,12 @@
             <div class="portfolio-item">
                 <img src="https://i.ibb.co/xtctsBbY/samani-generated-10.jpg" alt="Educational Project" class="portfolio-img">
                 <div class="portfolio-overlay">
-                    <h3>Educational Excellence</h3>
-                    <p>Partnering to turn schools into modern learning comforts</p>
+                    <h3>Hospitality Redefined</h3>
+                    <p>Creating memorable guest experiences through intentional design</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="https://i.ibb.co/chvdT3wR/samani-generated-8.png" alt="Corporate Project" class="portfolio-img">
+                <img src="https://i.ibb.co/Q3TkVX92/samani-generated-8.jpg" alt="Corporate Project" class="portfolio-img">
                 <div class="portfolio-overlay">
                     <h3>Corporate Innovation</h3>
                     <p>Designing workspaces that inspire productivity and collaboration</p>
@@ -598,19 +598,19 @@
             <div class="portfolio-item">
                 <img src="https://i.ibb.co/ZR1LgtSK/samani-generated-9.jpg" alt="Hospitality Project" class="portfolio-img">
                 <div class="portfolio-overlay">
-                    <h3>Hospitality Redefined</h3>
-                    <p>Creating memorable guest experiences through intentional design</p>
+                    <h3>Educational Excellence</h3>
+                    <p>Partnering to turn schools into modern learning comforts</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="https://i.ibb.co/nqgD6Ryr/samani-generated-6.png" alt="Residential Project" class="portfolio-img">
+                <img src="https://i.ibb.co/sd1h21JJ/Whats-App-Image-2025-11-26-at-12-47-18-PM-1.jpg" alt="Residential Project" class="portfolio-img">
                 <div class="portfolio-overlay">
                     <h3>Residential Transformation</h3>
                     <p>Turning houses into dream homes with functional aesthetics</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="https://i.ibb.co/qLLfcm5p/samani-generated-2.png" alt="Commercial Project" class="portfolio-img">
+                <img src="https://i.ibb.co/nqgD6Ryr/samani-generated-6.png" alt="Commercial Project" class="portfolio-img">
                 <div class="portfolio-overlay">
                     <h3>Commercial Excellence</h3>
                     <p>Elevating business environments with premium furnishings</p>
@@ -633,24 +633,24 @@
         </div>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <img src="https://i.ibb.co/DD0vDzDF/samani-generated-4.jpg" alt="Family Living Space" class="portfolio-img">
+                <img src="https://i.ibb.co/gLf35jgv/samani-generated-1.png" alt="Family Living Space" class="portfolio-img">
                 <div class="portfolio-overlay">
-                    <h3>Family Harmony</h3>
-                    <p>Designing family time to be a homely time</p>
+                    <h3>Harmonious Lobbies</h3>
+                    <p>Blending the waiting time with planned comforts</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="https://i.ibb.co/gLf35jgv/samani-generated-1.png" alt="Living Room Design" class="portfolio-img">
+                <img src="https://i.ibb.co/DD0vDzDF/samani-generated-4.jpg" alt="Living Room Design" class="portfolio-img">
                 <div class="portfolio-overlay">
-                    <h3>Living Elegance</h3>
+                    <h3>Family harmony</h3>
                     <p>Creating spaces where memories are made and shared</p>
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="https://i.ibb.co/0V6ZfD8s/Whats-App-Image-2025-11-26-at-12-47-22-PM.jpg" alt="Dining Area" class="portfolio-img">
+                <img src="https://i.ibb.co/chvdT3wR/samani-generated-8.png" class="portfolio-img">
                 <div class="portfolio-overlay">
-                    <h3>Dining Excellence</h3>
-                    <p>Transforming meals into experiences with beautifully designed dining spaces</p>
+                    <h3>Refectory Excellence</h3>
+                    <p>Transforming meals into experiences with productively spaced dining spaces</p>
                 </div>
             </div>
             <div class="portfolio-item">
@@ -661,7 +661,7 @@
                 </div>
             </div>
             <div class="portfolio-item">
-                <img src="https://i.ibb.co/DFTdxvv/Whats-App-Image-2025-11-26-at-12-47-18-PM.jpg" alt="Home Office" class="portfolio-img">
+                <img src="https://i.ibb.co/CKH10wsS/samani-generated-7.png" alt="Home Office" class="portfolio-img">
                 <div class="portfolio-overlay">
                     <h3>Productive Spaces</h3>
                     <p>Creating home offices that balance professionalism and comfort</p>
@@ -700,15 +700,15 @@
             <div class="portfolio-item">
                 <img src="https://i.ibb.co/MDPv6yGF/samani-generated-5.png" alt="Fitness Facility" class="portfolio-img">
                 <div class="portfolio-overlay">
-                    <h3>Fitness Innovation</h3>
-                    <p>Working out the lasting way with durable and functional fitness spaces</p>
+                    <h3>Poolside Glamour</h3>
+                    <p>Durability designed for all-weather functional outdoor spaces</p>
                 </div>
             </div>
             <div class="portfolio-item">
                 <img src="https://i.ibb.co/V0HwR6JK/samani-generated-1.jpg" alt="Gym Interior" class="portfolio-img">
                 <div class="portfolio-overlay">
                     <h3>Performance Spaces</h3>
-                    <p>Creating environments that motivate and support fitness goals</p>
+                    <p>Functional fitness spaces that motivate and support fitness goals</p>
                 </div>
             </div>
             <div class="portfolio-item">
@@ -841,7 +841,7 @@
 
     <!-- Audio Element -->
     <audio id="backgroundAudio" loop>
-        <source src="https://drive.google.com/uc?export=download&id=1GlB5aqUarKWDIvR1vLNG6o8P6XjGRp13" type="audio/mpeg">
+        <source src="https://audio.jukehost.co.uk/VwnhgD8mD8MD0u7z9H0LzlwYKKR4D9Xa">
         Your browser does not support the audio element.
     </audio>
 
