--- a/index.html
+++ b/index.html
@@ -511,9 +511,9 @@
 
     <!-- Rotating Background Slideshow -->
     <div class="slideshow-container">
-        <div class="slide" style="background-image: url('https://i.ibb.co/6RPTNQbR/UOLz3D5E.jpg');"></div>
-        <div class="slide" style="background-image: url('https://i.ibb.co/TDTcYbBG/VUuk9s0-I-1.jpg');"></div>
-        <div class="slide" style="background-image: url('https://i.ibb.co/SX1CtRBj/o7GOmpSy.jpg');"></div>
+        <div class="slide" style="background-image: url('https://i.ibb.co/N6WzMBpQ/samani-pic-5.jpg');"></div>
+        <div class="slide" style="background-image: url('https://i.ibb.co/twytVKG8/samani-pic-6.jpg');"></div>
+        <div class="slide" style="background-image: url('https://i.ibb.co/H1wL4ph/official-samani-logo.png');"></div>
     </div>
 
     <!-- Hero Section -->
@@ -774,15 +774,15 @@
             <div class="contact-info">
                 <h3>Get In Touch</h3>
                 <div class="contact-details">
-                    <p><i class="fas fa-building"></i> Visit our showroom: FAN BUILDING, NAKWERO, KIRA, UGANDA</p>
+                    <p><i class="fas fa-building"></i> Visit our showroom: SAMANI CREATIONS, NAKWERO A, KIRA, UGANDA</p>
                     <p><i class="fas fa-phone"></i> +256785727065</p>
-                    <p><i class="fas fa-envelope"></i> sales@samanicreations.com</p>
-                    <p><i class="fas fa-info-circle"></i> info@samanicreations.com</p>
+                    <p><i class="fas fa-envelope"></i> gn@samanicreations.com</p>
+                    <p><i class="fas fa-info-circle"></i> hello@samanicreations.com</p>
                 </div>
                 <div class="cta-buttons">
                     <a href="tel:+256785727065" class="btn btn-primary"><i class="fas fa-phone"></i> Call us now</a>
                     <a href="https://wa.me/256785727065" class="btn btn-whatsapp" style="margin-top: 15px;"><i class="fab fa-whatsapp"></i> WhatsApp now</a>
-                    <a href="mailto:sales@samanicreations.com" class="btn btn-secondary" style="margin-top: 15px;"><i class="fas fa-calendar-check"></i> Book a meeting</a>
+                    <a href="mailto:gn@samanicreations.com" class="btn btn-secondary" style="margin-top: 15px;"><i class="fas fa-calendar-check"></i> Book a meeting</a>
                 </div>
             </div>
             <div class="contact-form">
@@ -829,8 +829,8 @@
                 <ul>
                     <li><a href="tel:+256785727065">Call: +256785727065</a></li>
                     <li><a href="https://wa.me/256785727065">WhatsApp: +256785727065</a></li>
-                    <li><a href="mailto:sales@samanicreations.com">Email: sales@samanicreations.com</a></li>
-                    <li>Visit: FAN BUILDING, NAKWERO, KIRA, UGANDA</li>
+                    <li><a href="mailto:gn@samanicreations.com">Email: gn@samanicreations.com</a></li>
+                    <li>Visit: SAMANI CREATION SHOWROOM, NAKWERO A, KIRA, UGANDA</li>
                 </ul>
             </div>
         </div>
