--- a/index.html
+++ b/index.html
@@ -523,9 +523,9 @@
             <p>Samani Creations Ltd is Uganda's premier furnishing and interior design firm, specializing in creating bespoke environments for residential, commercial, and hospitality clients. With our expert team and attention to detail, we bring your vision to life.</p>
             <div class="cta-buttons">
                 <a href="tel:+256785727065" class="btn btn-primary"><i class="fas fa-phone"></i> Call us now</a>
-                <a href="mailto:sales@samanicreations.com" class="btn btn-secondary"><i class="fas fa-calendar-check"></i> Book a meeting</a>
+                <a href="mailto:gn@samanicreations.com" class="btn btn-secondary"><i class="fas fa-calendar-check"></i> Book a meeting</a>
                 <a href="https://wa.me/256785727065" class="btn btn-whatsapp"><i class="fab fa-whatsapp"></i> WhatsApp now</a>
-                <a href="mailto:info@samanicreations.com" class="btn btn-outline"><i class="fas fa-info-circle"></i> Find out more</a>
+                <a href="mailto:hello@samanicreations.com" class="btn btn-outline"><i class="fas fa-info-circle"></i> Find out more</a>
             </div>
         </div>
     </section>
