--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
                     <li><a href="tel:+256785727065">Call: +256785727065</a></li>
                     <li><a href="https://wa.me/256785727065">WhatsApp: +256785727065</a></li>
                     <li><a href="mailto:gn@samanicreations.com">Email: gn@samanicreations.com</a></li>
-                    <li>Visit: SAMANI CREATION SHOWROOM, NAKWERO A, KIRA, UGANDA</li>
+                    <li>Visit: SAMANI CREATIONS SHOWROOM, NAKWERO A, KIRA, UGANDA</li>
                 </ul>
             </div>
         </div>
